// Code generated by dbml-gen-go-model. DO NOT EDIT.
// Supported by duythinht@2020
package records

// NodesHistory is generated type for table 'Nodes_history'
type NodesHistory struct {
	ID          int64  `db:"id" json:"id" mapstructure:"id"`
	Name        string `db:"name" json:"name" mapstructure:"name"`
	ParentID    int64  `db:"parent_id" json:"parent_id" mapstructure:"parent_id"`
	Description string `db:"description" json:"description" mapstructure:"description"`
	Comment     string `db:"comment" json:"comment" mapstructure:"comment"`
	Meta        string `db:"meta" json:"meta" mapstructure:"meta"`
	// root/sub/leaf/node, заполнять при редактировании узла автоматически
	FullName    string `db:"full_name" json:"full_name" mapstructure:"full_name"`
	SignalID    int64  `db:"signal_id" json:"signal_id" mapstructure:"signal_id"`
	DirectoryID int64  `db:"directory_id" json:"directory_id" mapstructure:"directory_id"`
	CreatedAt   int    `db:"created_at" json:"created_at" mapstructure:"created_at"`
	UpdatedAt   int    `db:"updated_at" json:"updated_at" mapstructure:"updated_at"`
	// acl
	ACL map[string]interface{} `db:"acl" json:"acl" mapstructure:"acl"`
}

// table 'Nodes_history' columns list struct
type __tbl_Nodes_history_columns struct {
	ID          string
	Name        string
	ParentID    string
	Description string
	Comment     string
	Meta        string
	FullName    string
	SignalID    string
	DirectoryID string
	CreatedAt   string
	UpdatedAt   string
	ACL         string
}

// table 'Nodes_history' metadata struct
type __tbl_Nodes_history struct {
	Name    string
	Columns __tbl_Nodes_history_columns
}

// table 'Nodes_history' metadata info
var _tbl_Nodes_history = __tbl_Nodes_history{
	Columns: __tbl_Nodes_history_columns{
		ACL:         "acl",
		Comment:     "comment",
		CreatedAt:   "created_at",
		Description: "description",
		DirectoryID: "directory_id",
		FullName:    "full_name",
		ID:          "id",
		Meta:        "meta",
		Name:        "name",
		ParentID:    "parent_id",
		SignalID:    "signal_id",
		UpdatedAt:   "updated_at",
	},
	Name: "Nodes_history",
}

// GetColumns return list columns name for table 'Nodes_history'
func (*__tbl_Nodes_history) GetColumns() []string {
	return []string{"id", "name", "parent_id", "description", "comment", "meta", "full_name", "signal_id", "directory_id", "created_at", "updated_at", "acl"}
}

// T return metadata info for table 'Nodes_history'
func (*NodesHistory) T() *__tbl_Nodes_history {
	return &_tbl_Nodes_history
}
