// Code generated by dbml-gen-go-model. DO NOT EDIT.
// Supported by duythinht@2020
package records

// SignalsHistory is generated type for table 'Signals_history'
type SignalsHistory struct {
	ID          int64  `db:"id" json:"id" mapstructure:"id"`
	Name        string `db:"name" json:"name" mapstructure:"name"`
	Description string `db:"description" json:"description" mapstructure:"description"`
	ParentID    int64  `db:"parent_id" json:"parent_id" mapstructure:"parent_id"`
	Unit        string `db:"unit" json:"unit" mapstructure:"unit"`
	ValueTypeID int64  `db:"value_type_id" json:"value_type_id" mapstructure:"value_type_id"`
	ClassID     int64  `db:"class_id" json:"class_id" mapstructure:"class_id"`
	// ключ сигнала во внешней системе
	ExternalID string `db:"external_id" json:"external_id" mapstructure:"external_id"`
	CreatedAt  int    `db:"created_at" json:"created_at" mapstructure:"created_at"`
	UpdatedAt  int    `db:"updated_at" json:"updated_at" mapstructure:"updated_at"`
	// acl
	ACL map[string]interface{} `db:"acl" json:"acl" mapstructure:"acl"`
}

// table 'Signals_history' columns list struct
type __tbl_Signals_history_columns struct {
	ID          string
	Name        string
	Description string
	ParentID    string
	Unit        string
	ValueTypeID string
	ClassID     string
	ExternalID  string
	CreatedAt   string
	UpdatedAt   string
	ACL         string
}

// table 'Signals_history' metadata struct
type __tbl_Signals_history struct {
	Name    string
	Columns __tbl_Signals_history_columns
}

// table 'Signals_history' metadata info
var _tbl_Signals_history = __tbl_Signals_history{
	Columns: __tbl_Signals_history_columns{
		ACL:         "acl",
		ClassID:     "class_id",
		CreatedAt:   "created_at",
		Description: "description",
		ExternalID:  "external_id",
		ID:          "id",
		Name:        "name",
		ParentID:    "parent_id",
		Unit:        "unit",
		UpdatedAt:   "updated_at",
		ValueTypeID: "value_type_id",
	},
	Name: "Signals_history",
}

// GetColumns return list columns name for table 'Signals_history'
func (*__tbl_Signals_history) GetColumns() []string {
	return []string{"id", "name", "description", "parent_id", "unit", "value_type_id", "class_id", "external_id", "created_at", "updated_at", "acl"}
}

// T return metadata info for table 'Signals_history'
func (*SignalsHistory) T() *__tbl_Signals_history {
	return &_tbl_Signals_history
}
