// Code generated by dbml-gen-go-model. DO NOT EDIT.
// Supported by duythinht@2020
package records

// IbaBatchLink is generated type for table 'iba_batch_links'
type IbaBatchLink struct {
	IbaServerID int64  `db:"iba_server_id" json:"iba_server_id" mapstructure:"iba_server_id"`
	GateID      string `db:"gate_id" json:"gate_id" mapstructure:"gate_id"`
	// имя папки шары
	Mnt string `db:"mnt" json:"mnt" mapstructure:"mnt"`
	// заметки
	Comment string `db:"comment" json:"comment" mapstructure:"comment"`
}

// table 'iba_batch_links' columns list struct
type __tbl_iba_batch_links_columns struct {
	IbaServerID string
	GateID      string
	Mnt         string
	Comment     string
}

// table 'iba_batch_links' metadata struct
type __tbl_iba_batch_links struct {
	Name    string
	Columns __tbl_iba_batch_links_columns
}

// table 'iba_batch_links' metadata info
var _tbl_iba_batch_links = __tbl_iba_batch_links{
	Columns: __tbl_iba_batch_links_columns{
		Comment:     "comment",
		GateID:      "gate_id",
		IbaServerID: "iba_server_id",
		Mnt:         "mnt",
	},
	Name: "iba_batch_links",
}

// GetColumns return list columns name for table 'iba_batch_links'
func (*__tbl_iba_batch_links) GetColumns() []string {
	return []string{"iba_server_id", "gate_id", "mnt", "comment"}
}

// T return metadata info for table 'iba_batch_links'
func (*IbaBatchLink) T() *__tbl_iba_batch_links {
	return &_tbl_iba_batch_links
}
